--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,9 @@
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
     "@primeng/themes": "^19.1.0",
+    "chart.js": "^4.4.9",
+    "ng2-charts": "^4.1.1",
+    "primeicons": "^7.0.0",
     "primeng": "^19.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
